--- a/modulo(3)/exe023/tabela2.html
+++ b/modulo(3)/exe023/tabela2.html
@@ -11,9 +11,18 @@
             font-family: Arial, Helvetica, sans-serif;
         }
 
+        caption {
+            background-color: rgb(138, 135, 135);
+            border: 1px solid black;
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 5px;
+        }
+
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         td,
@@ -25,11 +34,22 @@
         thead {
             background-color: rgb(184, 184, 184);
             color: black;
+
+        }
+
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: rgb(184, 184, 184) ;
         }
 
         tfoot {
             background-color: rgb(184, 184, 184);
             color: black;
+        }
+
+        tbody > tr:nth-child(2n) {
+            background-color: lightgray;
         }
 
         .num {
@@ -41,10 +61,11 @@
 <body>
     <h1>Uso de tabelas grandes</h1>
     <table>
+        <caption>População das Unidades Federativas</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width:50px ;">População</th>
             </tr>
         </thead>
         <tbody>
@@ -159,8 +180,8 @@
         </tbody>
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
-                <td class="total"><strong>210.147.125</strong></td>
+                <th scope="row">Total de Habitantes</th>
+                <td scope="row"><strong>210.147.125</strong></td>
             </tr>
         </tfoot>
     </table>
