--- a/modulo(4)/exe024/iframe.html
+++ b/modulo(4)/exe024/iframe.html
@@ -5,11 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iframe</title>
+    <style>
+        iframe {
+            height: 400px;
+            width: 400px;
+        }
+    </style>
 </head>
 <body>
     <h1>Testando o uso de iframe</h1>
     <p>Acessando o site do 
-        <iframe src="https://www.cursoemvideo.com/matricule-se-agora/?gclid=CjwKCAjw_MqgBhAGEiwAnYOAeiA5OJ8hbDwZRR6Mcm3dK-SQumXGzhjWAhX4axCuT9nXjC4oddfVaRoCuSEQAvD_BwE" frameborder="1"></iframe>
+        <iframe src="https://www.cursoemvideo.com/matricule-se-agora/?gclid=CjwKCAjw_MqgBhAGEiwAnYOAeiA5OJ8hbDwZRR6Mcm3dK-SQumXGzhjWAhX4axCuT9nXjC4oddfVaRoCuSEQAvD_BwE" frameborder="1" scolling="no"></iframe>
         <a href="https://www.cursoemvideo.com/matricule-se-agora/?gclid=CjwKCAjw_MqgBhAGEiwAnYOAeiA5OJ8hbDwZRR6Mcm3dK-SQumXGzhjWAhX4axCuT9nXjC4oddfVaRoCuSEQAvD_BwE" target="_blank">curso em video</a>
     para programar</p>
 
