--- a/modulo(4)/exe025/form3.html
+++ b/modulo(4)/exe025/form3.html
@@ -5,13 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>formulario</title>
+    <style>
+        * {
+            font-family: Arial, Helvetica, sans-serif;
+            font-size:24px;
+        }
+    </style>
 </head>
 <body>
-    <h1>teste de formulario</h1>
-    <form action="cadastro.php" method="post">
+    <h1>Teste de formulario</h1>
+    <form action="cadastro.php" method="post" autocomplete="on">
        <p>
         <label for="inome">Nome</label>
-        <input type="text" name="nome" id="inome" required maxlength="30">
+        <input type="text" name="nome" id="inome" required maxlength="30" placeholder="Nome Completo" autocomplete="name">
+       </p>
+       <p>
+        <label for="imedia">Média</label>
+        <input type="number" name="media" id="imedia" min="0" max="10" step="0.5">
+       </p>
+       <p>
+        <label for="imes">Periodo Letivo</label>
+        <input type="month" name="mes" id="imes" value="2023-05">
+       </p>
+       <p>
+        <label for="idia">Dia da Prova</label>
+        <input type="date" name="dia" id="idia">
+       </p>
+       <p>
+        <input type="submit" value="Enviar">
+        <input type="reset" value="Limpar">
+        in
        </p>
     </form>
 </body>
